--- a/_cutups/less/sections/avtopark.less
+++ b/_cutups/less/sections/avtopark.less
@@ -27,9 +27,7 @@
   margin-bottom: 45px;
   position: relative;
   z-index: 101;
-  .header__block {
-    margin-bottom: 0;
-  }
+
 }
 
 .main__wrapper {
@@ -63,6 +61,7 @@
   box-shadow: 0 -4px 0 0 #FCFCFC,
   0px 0px 50px rgba(0, 0, 0, 0.05);
   border-radius: 8px;
+  overflow: hidden;
   background: #fff;
   margin-right: 20px;
   margin-bottom: 20px;
