--- a/_cutups/less/sections/bus.less
+++ b/_cutups/less/sections/bus.less
@@ -19,6 +19,9 @@
   margin: 0 auto;
 }
 .sticker__img {
+  max-width: 1000px;
+  margin: 0 auto;
+  margin-bottom: 15px;
   img {
     width: 100%;
   }
