--- a/_cutups/less/sections/footer.less
+++ b/_cutups/less/sections/footer.less
@@ -111,13 +111,15 @@
 }
 
 .under-footer__link {
-  padding: 3px;
+  padding: 3px 10px;
   border: 2px solid #fff;
   text-decoration: none;
   -webkit-border-radius: 15px;
   border-radius: 15px;
   color: white;
   margin-right: 10px;
+  margin-bottom: 10px;
+
   &:last-of-type {
     margin-right: 0;
   }
@@ -208,3 +210,7 @@
   }
 
 }
+
+
+
+
