--- a/_cutups/less/sections/header.less
+++ b/_cutups/less/sections/header.less
@@ -63,7 +63,11 @@
     overflow-x: scroll;
   }
 
+  //change
   &__bus-link {
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
     width: 217px !important;
     height: 217px;
     background-color: #fff;
@@ -178,7 +182,7 @@
 }
 
 .main__nav-link {
-  padding: 3px;
+  padding: 3px 10px;
   border: 2px solid #fff;
   text-decoration: none;
   -webkit-border-radius: 15px;
@@ -253,7 +257,7 @@
   .header__logo {
     position: absolute;
     top: 20px;
-    left: 20px;
+    left: 0px;
   }
   .main__nav--active {
     position: relative;
@@ -285,7 +289,7 @@
   }
 
   .header__wrapper {
-    padding-top: 92px;
+    padding-top: 110px;
   }
 
   .header__block {
