--- a/_cutups/less/sections/reviews.less
+++ b/_cutups/less/sections/reviews.less
@@ -336,6 +336,29 @@
   margin-bottom: 20px;
 }
 
+.review__form-checkbox {
+  position: relative;
+  width: 28px;
+  height: 28px;
+  margin-right: 5px;
+  background: none;
+  outline: none;
+  border: none;
+  &::before {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 28px;
+    height: 28px;
+
+    border: none;
+    display: block;
+    outline: none;
+    background: url(../img/starNo.svg) no-repeat center;
+  }
+
+}
+
 @media (max-width: 850px) {
   .review__form {
     top: 350px;
@@ -366,4 +389,78 @@
     font-size: 20px;
     margin-bottom: 20px;
   }
+}
+
+.new-react-version {
+  padding: 20px 20px;
+  border: 1px solid #eee;
+  border-radius: 20px;
+  box-shadow: 0 2px 12px 0 rgba(0,0,0,0.1);
+
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.7;
+}
+
+.new-react-version .react-svg-logo {
+  text-align: center;
+  max-width: 60px;
+  margin: 20px auto;
+  margin-top: 0;
+}
+
+
+/*sprite with stars*/
+#reviewStars-input input:checked ~ label, #reviewStars-input label, #reviewStars-input label:hover, #reviewStars-input label:hover ~ label {
+  background: url(../img/starNo.svg) no-repeat;
+}
+
+#reviewStars-input {
+
+  /*fix floating problems*/
+  overflow: hidden;
+  *zoom: 1;
+  /*end of fix floating problems*/
+
+  position: relative;
+  float: left;
+}
+
+#reviewStars-input input {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+
+  background: url(../img/starNo.svg) no-repeat;
+  opacity: 0;
+
+  width: 28px;
+  height: 26px;
+
+  position: absolute;
+  top: 0;
+  z-index: 0;
+
+}
+
+#reviewStars-input input:checked ~ label {
+  background: url(../img/star.svg) no-repeat;
+  width: 28px;
+  height: 26px;
+}
+
+#reviewStars-input label {
+
+  width: 28px;
+  height: 26px;
+  float: right;
+  cursor: pointer;
+  margin-right: 10px;
+
+  position: relative;
+  z-index: 1;
+}
+
+#reviewStars-input label:hover, #reviewStars-input label:hover ~ label {
+
+  width: 28px;
+  height: 26px;
 }
