--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,122 +1,3 @@
-/* Slider */
-.slick-slider
-{
-    position: relative;
-
-    display: block;
-    box-sizing: border-box;
-
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-
-    -webkit-touch-callout: none;
-    -khtml-user-select: none;
-    -ms-touch-action: pan-y;
-        touch-action: pan-y;
-    -webkit-tap-highlight-color: transparent;
-}
-
-.slick-list
-{
-    position: relative;
-
-    display: block;
-    overflow: hidden;
-
-    margin: 0;
-    padding: 0;
-}
-.slick-list:focus
-{
-    outline: none;
-}
-.slick-list.dragging
-{
-    cursor: pointer;
-    cursor: hand;
-}
-
-.slick-slider .slick-track,
-.slick-slider .slick-list
-{
-    -webkit-transform: translate3d(0, 0, 0);
-       -moz-transform: translate3d(0, 0, 0);
-        -ms-transform: translate3d(0, 0, 0);
-         -o-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
-}
-
-.slick-track
-{
-    position: relative;
-    top: 0;
-    left: 0;
-
-    display: block;
-}
-.slick-track:before,
-.slick-track:after
-{
-    display: table;
-
-    content: '';
-}
-.slick-track:after
-{
-    clear: both;
-}
-.slick-loading .slick-track
-{
-    visibility: hidden;
-}
-
-.slick-slide
-{
-    display: none;
-    float: left;
-
-    height: 100%;
-    min-height: 1px;
-}
-[dir='rtl'] .slick-slide
-{
-    float: right;
-}
-.slick-slide img
-{
-    display: block;
-}
-.slick-slide.slick-loading img
-{
-    display: none;
-}
-.slick-slide.dragging img
-{
-    pointer-events: none;
-}
-.slick-initialized .slick-slide
-{
-    display: block;
-}
-.slick-loading .slick-slide
-{
-    visibility: hidden;
-}
-.slick-vertical .slick-slide
-{
-    display: block;
-
-    height: auto;
-
-    border: 1px solid transparent;
-}
-.slick-arrow.slick-hidden {
-    display: none;
-}
-
-
 /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
 /**
  * 1. Change the default font family in all browsers (opinionated).
@@ -685,6 +566,8 @@ img {
   overflow-x: scroll;
 }
 .header__bus-link {
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
   width: 217px !important;
   height: 217px;
   background-color: #fff;
@@ -802,7 +685,7 @@ img {
   margin-right: 0px;
 }
 .main__nav-link {
-  padding: 3px;
+  padding: 3px 10px;
   border: 2px solid #fff;
   text-decoration: none;
   -webkit-border-radius: 15px;
@@ -1198,6 +1081,9 @@ img {
     word-wrap: break-word;
     width: 100%;
   }
+}
+.info__hide {
+  display: none;
 }
 .advantages {
   position: relative;
@@ -1760,6 +1646,25 @@ img {
           justify-content: center;
   margin-bottom: 20px;
 }
+.review__form-checkbox {
+  position: relative;
+  width: 28px;
+  height: 28px;
+  margin-right: 5px;
+  background: none;
+  outline: none;
+  border: none;
+}
+.review__form-checkbox::before {
+  content: '';
+  position: absolute;
+  width: 28px;
+  height: 28px;
+  border: none;
+  display: block;
+  outline: none;
+  background: url(../img/starNo.svg) no-repeat center;
+}
 @media (max-width: 850px) {
   .review__form {
     top: 350px;
@@ -1784,6 +1689,67 @@ img {
     font-size: 20px;
     margin-bottom: 20px;
   }
+}
+.new-react-version {
+  padding: 20px 20px;
+  border: 1px solid #eee;
+  -webkit-border-radius: 20px;
+          border-radius: 20px;
+  -webkit-box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+          box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+  text-align: center;
+  font-size: 14px;
+  line-height: 1.7;
+}
+.new-react-version .react-svg-logo {
+  text-align: center;
+  max-width: 60px;
+  margin: 20px auto;
+  margin-top: 0;
+}
+/*sprite with stars*/
+#reviewStars-input input:checked ~ label,
+#reviewStars-input label,
+#reviewStars-input label:hover,
+#reviewStars-input label:hover ~ label {
+  background: url(../img/starNo.svg) no-repeat;
+}
+#reviewStars-input {
+  /*fix floating problems*/
+  overflow: hidden;
+  *zoom: 1;
+  /*end of fix floating problems*/
+  position: relative;
+  float: left;
+}
+#reviewStars-input input {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  background: url(../img/starNo.svg) no-repeat;
+  opacity: 0;
+  width: 28px;
+  height: 26px;
+  position: absolute;
+  top: 0;
+  z-index: 0;
+}
+#reviewStars-input input:checked ~ label {
+  background: url(../img/star.svg) no-repeat;
+  width: 28px;
+  height: 26px;
+}
+#reviewStars-input label {
+  width: 28px;
+  height: 26px;
+  float: right;
+  cursor: pointer;
+  margin-right: 10px;
+  position: relative;
+  z-index: 1;
+}
+#reviewStars-input label:hover,
+#reviewStars-input label:hover ~ label {
+  width: 28px;
+  height: 26px;
 }
 .footer {
   padding-top: 100px;
@@ -1917,13 +1883,14 @@ img {
   text-decoration: none;
 }
 .under-footer__link {
-  padding: 3px;
+  padding: 3px 10px;
   border: 2px solid #fff;
   text-decoration: none;
   -webkit-border-radius: 15px;
   border-radius: 15px;
   color: white;
   margin-right: 10px;
+  margin-bottom: 10px;
 }
 .under-footer__link:last-of-type {
   margin-right: 0;
