--- a/public/css/style.css
+++ b/public/css/style.css
@@ -837,6 +837,7 @@ img {
     margin: 0 auto;
     margin-bottom: 20px;
     position: relative;
+      z-index: 1000;
   }
   .mobile_wrap {
     display: none;
@@ -2050,7 +2051,7 @@ img {
   padding-bottom: 100px;
   margin-bottom: 45px;
   position: relative;
-  z-index: 101;
+  /*z-index: 101;*/
 }
 .main__wrapper {
   max-width: 1415px;
