--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2109,6 +2109,8 @@ img {
   font-size: 24px;
   line-height: 29px;
   margin-bottom: 17px;
+    color: #000;
+    text-decoration: none;
 }
 .carpark__item-info {
   padding: 20px;
@@ -2223,6 +2225,8 @@ img {
     text-align: left;
     color: #fff;
     margin-bottom: 10px;
+      font-size: 30px;
+      line-height: 1.3;
   }
   .main__subtitle {
     color: #fff;
